# computer-architecture

./: ALU.cpp  ALU.h  ALUControl.cpp  ALUControl.h  BancoReg.cpp  BancoReg.h  CMakeLists.txt  Control.cpp  Control.h  DataMemory.cpp  DataMemory.h  EX_MEM.cpp  EX_MEM.h  FileIO.cpp  FileIO.h  IDEX.cpp  IDEX.h  IFID.cpp  IFID.h  MEM_WB.cpp  MEM_WB.h  MemWbReg.h  MemoriaInstrucoes.cpp  MemoriaInstrucoes.h  Multiplexador.cpp  Multiplexador.h  PC.cpp  PC.h  PortaAND.cpp  PortaAND.h  README.md  ShiftLeft.cpp  ShiftLeft.h  Somador.cpp  Somador.h  main.cpp  modelos-instruções.txt  teste.txt  teste10.txt  teste2.txt  (+9 more)
